--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
+dist
 
 # Gatsby files
 .cache/
@@ -101,3 +102,5 @@ typings/
 
 # TernJS port file
 .tern-port
+
+*.DS_Store
